--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <html>
 <head>
+  <title>即将入驻美团外卖</title>
 <!-- 以下方式只是刷新不跳转到其他页面 -->
 <!-- 以下方式定时转到其他页面 -->
-<meta http-equiv="refresh" content="5;url=http://www.baidu.com"> 
+<!-- <meta http-equiv="refresh" content="5;url=http://www.baidu.com">  -->
 </head>
-<body>shop1</body>
+<body>
+  <h1>睿健卡路里（衡阳店）！</h1>
+<h1>即将入驻美团外卖！！！</h1>
+<h2>扫码加店长微信</h1> 
+<h2>进开店福利群</h2> 
+<h1>霸王餐活动！！！</h1> 
+<h2>即将入驻美团外卖！！！</h1> 
+<h1>即将入驻美团外卖！！！</h1> 
+</body>
 </html>
