--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
 <!-- 以下方式定时转到其他页面 -->
 <!-- <meta http-equiv="refresh" content="5;url=http://www.baidu.com">  -->
 </head>
-<body>
-  <h1>睿健卡路里（衡阳店）！</h1>
-<h1>即将入驻美团外卖！！！</h1>
-<h2>扫码加店长微信</h1> 
-<h2>进开店福利群</h2> 
-<h1>霸王餐活动！！！</h1> 
-<h2>即将入驻美团外卖！！！</h1> 
-<h1>即将入驻美团外卖！！！</h1> 
+<body><h1 style="color: #b7852b;" align="center">睿健卡路里（衡阳店）</h1>
+<h1 align="center" style="color: #f6c500;">即将入驻美团外卖！！！</h1>
+<h2 align="center" style="color: green;">扫码加店长微信</h2> 
+<h1 align="center" style="color: red;">享霸王餐活动！！！</h1><h2 align="center">进开店福利群</h2> 
+  <div><img src='./wechat.jpg'/></div>
 </body>
 </html>
