--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <h1 align="center" style="color: #f6c500;">即将入驻美团外卖！！！</h1>
 <h2 align="center" style="color: green;">扫码加店长微信</h2> 
 <h1 align="center" style="color: red;">享霸王餐活动！！！</h1><h2 align="center">进开店福利群</h2> 
-  <div><img src='./wechat.jpg'/></div>
+  <div><img src='/wechat.jpg'/></div>
 </body>
 </html>
