--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
+  
   <title>即将入驻美团外卖</title>
+  <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 <!-- 以下方式只是刷新不跳转到其他页面 -->
 <!-- 以下方式定时转到其他页面 -->
 <!-- <meta http-equiv="refresh" content="5;url=http://www.baidu.com">  -->
@@ -9,6 +11,28 @@
 <h1 align="center" style="color: #f6c500;">即将入驻美团外卖！！！</h1>
 <h2 align="center" style="color: green;">扫码加店长微信</h2> 
 <h1 align="center" style="color: red;">享霸王餐活动！！！</h1><h2 align="center">进开店福利群</h2> 
-  <div><img src='/wechat.jpg'/></div>
+  <div class="wechat"><img src='/wechat.jpg'/></div>
 </body>
+<style>
+  .wechat{
+  width:50%;
+  height:200px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
+.wechat img{
+	width:100%;
+	height:auto;
+}
+
+</style>
+<script>
+  $(function(){    
+    var divW=$(".wechat").width();
+    var divH = $(".wechat").height();
+    divW=divH;
+  }
+</script>
 </html>
