--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1 align="center" style="color: #f6c500;">即将入驻美团外卖！！！</h1>
 <h2 align="center" style="color: green;">扫码加店长微信</h2> 
 <h1 align="center" style="color: red;">享霸王餐活动！！！</h1><h2 align="center">进开店福利群</h2> 
-  <div class="wechat"><img src='/wechat.jpg'/></div>
+  <div class="wechat"><img src='wechat.jpg'/></div>
 </body>
 <style>
   .wechat{
@@ -33,6 +33,6 @@
     var divW=$(".wechat").width();
     var divH = $(".wechat").height();
     divW=divH;
-  }
+  })
 </script>
 </html>
