--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body><h1 style="color: #b7852b;" align="center">睿健卡路里（衡阳店）</h1>
 <h1 align="center" style="color: #f6c500;">即将入驻美团外卖！！！</h1>
-<h2 align="center" style="color: green;">扫码加店长微信</h2> 
-<h1 align="center" style="color: red;">享霸王餐活动！！！</h1><h2 align="center">进开店福利群</h2> 
-  <div class="wechat"><img src='./wechat.jpg'/></div>
+<h2 align="center" style="color: green;">扫码加店长微信</h2>
+<h2 align="center">进开店福利群</h2> 
+<h1 align="center" style="color: red;">享霸王餐活动！！！</h1>
+  <div align="center" class="wechat"><img src='./wechat.jpg'/></div>
 </body>
 <style>
   .wechat{
