--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
 <h2 align="center" style="color: green;">扫码加店长微信</h2>
 <h2 align="center">进开店福利群</h2> 
 <h1 align="center" style="color: red;">享霸王餐活动！！！</h1>
-  <div align="center" class="wechat"><img src='./wechat.jpg'/></div>
+  <div class="wechat"><img src='./wechat.jpg'/></div>
 </body>
 <style>
   .wechat{
   width:50%;
   height:200px;
   display:block;
-  align-items:center;
-  justify-content:center;
+  margin: 0 auto;
 }
 
 .wechat img{
-	width:100%;
-	height:auto;
+  width:100%;
+  height:auto;
 }
 
 </style>
