--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 <h2 align="center" style="color: green;">扫码加店长微信</h2>
 <h2 align="center">进开店福利群</h2> 
 <h1 align="center" style="color: red;">享霸王餐活动！！！</h1>
-  <div class="wechat"><img src='./wechat.jpg'/></div>
+  <div class="wechat">
+    <img src='./wechat.jpg'/>
+    <img src='./wechat.jpg'/>
+    <img src='./wechat.jpg'/>
+    <img src='./wechat.jpg'/>
+  </div>
 </body>
 <style>
   .wechat{
