--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 <h1 align="center" style="color: red;">享霸王餐活动！！！</h1>
   <div class="wechat">
     <img src='./wechat.jpg'/>
-    <img src='./wechat.jpg'/>
-    <img src='./wechat.jpg'/>
-    <img src='./wechat.jpg'/>
+    <img src='./1.jpg'/>
+    <img src='./2.jpg'/>
+    <img src='./3.jpg'/>
+    <img src='./4.jpg'/>
+    <img src='./5.jpg'/>
+    <img src='./6.jpg'/>
   </div>
 </body>
 <style>
