--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <!-- <meta http-equiv="refresh" content="5;url=http://www.baidu.com">  -->
 </head>
 <body><h1 style="color: #b7852b;" align="center">睿健卡路里（衡阳店）</h1>
+<h1 style="color: #green;" align="center">健康低热量简餐、意面</h1>
 <h1 align="center" style="color: #f6c500;">即将入驻美团外卖！！！</h1>
 <h2 align="center" style="color: green;">扫码加店长微信</h2>
-<h2 align="center">进开店福利群</h2> 
+<h2 align="center">开业期间进微信福利群</h2> 
 <h1 align="center" style="color: red;">享霸王餐活动！！！</h1>
   <div class="wechat">
     <img src='./wechat.jpg'/>
@@ -21,6 +22,9 @@
     <img src='./5.jpg'/>
     <img src='./6.jpg'/>
   </div>
+<h2 align="center">门店地址：石鼓区向农路与牛角巷交汇处（中建-衡阳中心后面）</h2> 
+<h2 align="center">联系电话：19925324814/17770996887</h2> 
+<h2 align="center" style="color: red;">堂食开业期间亦有优惠！</h2> 
 </body>
 <style>
   .wechat{
