--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 <!-- 以下方式定时转到其他页面 -->
 <!-- <meta http-equiv="refresh" content="5;url=http://www.baidu.com">  -->
 </head>
-<body><h1 style="color: #b7852b;" align="center">睿健卡路里（衡阳店）</h1>
-<h1 style="color: #green;" align="center">健康低热量简餐、意面</h1>
+<body>
+<br />
+<br /> 
+<h1 style="color: #b7852b;" align="center">睿健卡路里（衡阳店）</h1>
+<h3 style="color: #green;" align="center">健康低热量简餐、意面</h1>
 <h1 align="center" style="color: #f6c500;">即将入驻美团外卖！！！</h1>
 <h2 align="center" style="color: green;">扫下图二维码加店长微信</h2>
 <h2 align="center">开业期间进微信福利群</h2> 
