--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <br /> 
 <h1 style="color: #b7852b;" align="center">睿健卡路里（衡阳店）</h1>
 <h3 style="color: #green;" align="center">健康低热量简餐、意面</h1>
-<h1 align="center" style="color: #f6c500;">即将入驻美团外卖！！！</h1>
+<h1 align="center" style="color: #f6c500;">即将入驻美团外卖！！！(预计13-17号之间)</h1>
 <h2 align="center" style="color: green;">扫下图二维码加店长微信</h2>
 <h2 align="center">开业期间进微信福利群</h2> 
 <h1 align="center" style="color: red;">享霸王餐活动！！！</h1>
