--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <h2 align="center">门店地址：石鼓区向农路与牛角巷交汇处（中建-衡阳中心后面）</h2> 
 <h2 align="center">联系电话：19925324814/17770996887</h2> 
 <h2 align="center" style="color: red;">堂食开业期间亦有优惠！</h2> 
+
+<h2 align="center" style="color: red;">外卖上线前同时可享堂食满减活动（20-7，49-19，69-28，100-40），我自己免费送🎉🎉🎉 </h2> 
+
   <div class="wechat">
     <img src='./wechat.jpg'/>
     <img src='./1.jpg'/>
