--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <br /> 
 <h1 style="color: #b7852b;" align="center">睿健卡路里（衡阳店）</h1>
 <h3 style="color: #green;" align="center">健康低热量简餐、意面</h1>
-<h1 align="center" style="color: #f6c500;">即将入驻美团外卖！！！(预计13-17号之间)</h1>
+<h1 align="center" style="color: #f6c500;">即将入驻美团外卖！！！(预计17-20号之间)</h1>
 <h2 align="center" style="color: green;">扫下图二维码加店长微信</h2>
-<h2 align="center">开业期间进微信福利群</h2> 
-<h1 align="center" style="color: red;">享霸王餐活动！！！</h1>
+<h2 align="center">开业期间进微信福利群（静候群通知）</h2> 
+<h1 align="center" style="color: red;">可享霸王餐活动！！！</h1>
   <h2 align="center">门店地址：石鼓区向农路与牛角巷交汇处（中建-衡阳中心后面）</h2> 
 <h2 align="center">联系电话：19925324814/17770996887</h2> 
 <h2 align="center" style="color: red;">堂食开业期间亦有优惠！</h2> 
 
-<h2 align="center" style="color: red;">外卖上线前同时可享堂食满减活动（20-7，49-19，69-28，100-40），我自己免费送🎉🎉🎉 </h2> 
+<h2 align="center" style="color: red;">外卖上线前同时可享堂食满减活动（20-7、49-19、69-28、100-40），我自己免费送🎉🎉🎉 </h2> 
 
   <div class="wechat">
     <img src='./wechat.jpg'/>
